--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,18 +37,18 @@
     "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.462.0",
-    "next-themes": "^0.4.3",
+    "lucide-react": "^0.468.0",
+    "next-themes": "^0.4.4",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
-    "@types/react": "^19",
+    "@types/react": "^19.0.1",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "eslint": "latest",
-    "prettier": "latest",
-    "typescript": "latest"
+    "eslint": "^9.16.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2"
   },
   "prettier": "@yuki/prettier-config"
 }
