--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -14,22 +14,22 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@eslint/compat": "^1.2.3",
-    "@next/eslint-plugin-next": "^14.2.18",
+    "@eslint/compat": "^1.2.4",
+    "@next/eslint-plugin-next": "^15.0.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-turbo": "^2.3.3",
-    "typescript-eslint": "^8.16.0"
+    "typescript-eslint": "^8.17.0"
   },
   "devDependencies": {
     "@types/eslint__js": "^8.42.3",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "eslint": "latest",
-    "prettier": "latest",
-    "typescript": "latest"
+    "eslint": "^9.16.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2"
   },
   "prettier": "@yuki/prettier-config"
 }
