--- a/apps/react-router/package.json
+++ b/apps/react-router/package.json
@@ -17,6 +17,9 @@
     "@react-router/fs-routes": "^7.0.2",
     "@react-router/node": "^7.0.2",
     "@t3-oss/env-core": "^0.11.1",
+    "@tanstack/react-query": "^5.62.7",
+    "@trpc/client": "^11.0.0-rc.660",
+    "@trpc/react-query": "^11.0.0-rc.660",
     "@vercel/node": "^3.2.29",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
@@ -27,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.0.2",
+    "superjson": "^2.2.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
